# memoserv

./: Cargo.toml  README.md  conf.json
memobook/: Cargo.toml
memobook/src/: backer.rs  backerparserjson.rs  configuration.rs  crawler.rs  dbbundler.rs  dbgenerator.rs  dbhexgenerator.rs  dbopenerassembler.rs  emptygenerator.rs  exportlogger.rs  filecrawler.rs  filtercontainer.rs  grepcrawler.rs  importcrawler.rs  importcrawlerp.rs  lib.rs  liteaddrecord.rs  liteexportquery.rs  litefieldreplace.rs  litemarkupdate.rs  liteopen.rs  litequeryassembler.rs  litetargetremove.rs  litetypeupdate.rs  logic.rs  maskingset.rs  mberror.rs  mbfilter.rs  mbmacro.rs  mimer.rs  modifierassembler.rs  modifiers.rs  query.rs  queryassembler.rs  queryer.rs  repository.rs  suffixhash.rs  transportstruct.rs  utcbackup.rs  utckeeper.rs  (+1 more)
src/: configmodifier.rs  lib.rs  main.rs  manager.rs  parse.rs  prepare.rs
