[package]
name = "memobook"
version = "0.1.1"
edition = "2021"


[dependencies]
chrono = "0.4.40"
glob = "0.3.1"
json = "0.12.4"
rusqlite = { version="0.31.0", features=["bundled"] }
sha256 = "1.5.0"
tokio = { version="1.45.1", features=["rt"] }

[profile.release]
codegen-units = 1
strip = "debuginfo"
